--- a/index.html
+++ b/index.html
@@ -1110,7 +1110,7 @@ if (termoPesquisa) {
   	<i class="bi bi-person-add"></i> <a href="https://t.me/dividir_contas_premium/23511" target="_blank">Fazer Cadastro</a>
 	</div>
 	<div class="painel-item">
-  	<i class="bi bi-share"></i> <a href="https://api.whatsapp.com/send?text=%2AVisite%20nosso%20grupo%20no%20Telegram%2A%0A%0A%2ADIVIDIR%20CONTAS%20PREMIUM%2A%0Ahttps%3A%2F%2Ft.me%2Fdividir_contas_premium%0A%0A_Anuncie%20e%20compartilhe_%0ASeu%20streaming%20no%20nosso%20espa%C3%A7o" target="_blank">Compartilhar Grupo</a>
+  	<i class="bi bi-share"></i> <a href="https://api.whatsapp.com/send?text=%2AANUNCIE%20E%20COMPARTILHE%2A%0A_Seu%20Streaming%2C%20Nosso%20Espa%C3%A7o_%0A%0A%2ADIVIDIR%20CONTAS%20PREMIUM%2A%0Ahttps%3A%2F%2Ft.me%2Fdividir_contas_premium" target="_blank">Compartilhar Grupo</a>
 	</div>
 	<div class="painel-item">
   	<i class="bi bi-shield-exclamation"></i> <a href="https://telegra.ph/LISTA-DE-GOLPISTAS-10-06" target="_blank">Lista de Golpistas</a>
@@ -1129,4 +1129,5 @@ if (termoPesquisa) {
 
 </body>
 </html>
+
 
