--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <base target="_top">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-<link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="icon" href="https://i.imgur.com/NHZnler.png" type="image/png">
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <style>
 	:root {
   	--padding: clamp(1rem, 4vw, 1.5rem);
@@ -1130,5 +1131,26 @@ if (termoPesquisa) {
   <i class="bi bi-whatsapp"></i>
 </button>
 
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+      const params = new URLSearchParams(window.location.search);
+      if (params.get("abrir") === "formulario") {
+        mostrarFormulario();
+      }
+      setTimeout(() => {
+        if (window.Telegram && Telegram.WebApp && Telegram.WebApp.initDataUnsafe.user) {
+          const user = Telegram.WebApp.initDataUnsafe.user;
+          if (user.username) {
+            const campo = document.getElementById("usuario");
+            if (campo) {
+              campo.value = "@" + user.username;
+            }
+          }
+        }
+      }, 200);
+    });
+</script>
+	
 </body>
 </html>
+
