--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <base target="_top">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-  <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="icon" href="https://i.imgur.com/NHZnler.png" type="image/png">
-  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+<script src="https://telegram.org/js/telegram-web-app.js"></script>
   <style>
 	:root {
   	--padding: clamp(1rem, 4vw, 1.5rem);
@@ -631,42 +631,93 @@ function limitarKotas(input) {
 }
 
 function mostrarFormulario() {
-ocultarBotaoWhatsapp();
+
+  // 🔐 Bloqueio: só permite se vier do Telegram WebApp
+  if (!window.Telegram ||
+      !Telegram.WebApp ||
+      !Telegram.WebApp.initDataUnsafe ||
+      !Telegram.WebApp.initDataUnsafe.user) {
+
+    alert("⚠️ Este formulário só pode ser acessado via botão ANUNCIAR no grupo DIVIDIR CONTAS PREMIUM.");
+    return;
+  }
+
+  ocultarBotaoWhatsapp();
+
   document.getElementById("formulario").style.display = "block";
   document.getElementById("anuncios").style.display = "none";
   document.getElementById("detalhes").style.display = "none";
 
-  // Carregar opções da planilha
-fetch("https://script.google.com/macros/s/AKfycbwwC1b5pPAaKlkXkKkMtUteb4yG4-YbnmugdXbhXDtTxPSE_OOCvs34ivYxlD8VJhEXjg/exec?funcao=listarOpcoesStreaming")
-  .then(res => res.json())
-  .then(opcoes => {
-	const select = document.getElementById("selectStreaming");
-	select.innerHTML = "";
-	opcoes.forEach(op => {
-  	const opt = document.createElement("option");
-  	opt.text = op;
-  	opt.value = op;
-  	select.add(opt);
-	});
-  })
-  .catch(err => console.error("Erro ao carregar opções:", err));
+  const user = Telegram.WebApp.initDataUnsafe.user;
+  const campoUsuario = document.getElementById("usuario");
 
-const container = document.getElementById("containerExtras");
-container.className = "checkbox-list hidden"; 
-container.innerHTML = "";
+  if (campoUsuario) {
 
-opcoesExtra.forEach(opcao => {
-  const label = document.createElement("label");
+    let nomeUsuario;
 
-  const input = document.createElement("input");
-  input.type = "checkbox";
-  input.name = "extra";
-  input.value = opcao;
+    // 🔹 Se tiver @username usa ele
+    if (user.username) {
+      nomeUsuario = "@" + user.username;
+    } 
+    // 🔹 Se não tiver username, usa primeiro nome
+    else {
+      nomeUsuario = user.first_name;
+    }
 
-  label.appendChild(input);
-  label.appendChild(document.createTextNode(opcao));
-  container.appendChild(label);
-});
+    campoUsuario.value = nomeUsuario;
+    campoUsuario.setAttribute("readonly", true);
+
+    // 🔥 Buscar WhatsApp automaticamente
+    fetch(`https://script.google.com/macros/s/AKfycbwwC1b5pPAaKlkXkKkMtUteb4yG4-YbnmugdXbhXDtTxPSE_OOCvs34ivYxlD8VJhEXjg/exec?funcao=buscarWhatsapp&nome=${encodeURIComponent(nomeUsuario)}`)
+      .then(res => res.text())
+      .then(telefone => {
+        const inputWhatsapp = document.getElementById("whatsappInput");
+        if (telefone && inputWhatsapp && !inputWhatsapp.value) {
+          inputWhatsapp.value = telefone;
+        }
+      })
+      .catch(err => console.error("Erro ao buscar WhatsApp:", err));
+  }
+
+  // 🔹 Carregar opções de streaming
+  fetch("https://script.google.com/macros/s/AKfycbwwC1b5pPAaKlkXkKkMtUteb4yG4-YbnmugdXbhXDtTxPSE_OOCvs34ivYxlD8VJhEXjg/exec?funcao=listarOpcoesStreaming")
+    .then(res => res.json())
+    .then(opcoes => {
+      const select = document.getElementById("selectStreaming");
+      if (!select) return;
+
+      select.innerHTML = "";
+
+      opcoes.forEach(op => {
+        const opt = document.createElement("option");
+        opt.text = op;
+        opt.value = op;
+        select.add(opt);
+      });
+    })
+    .catch(err => console.error("Erro ao carregar opções:", err));
+
+  // 🔹 Resetar extras
+  const container = document.getElementById("containerExtras");
+  if (container) {
+    container.className = "checkbox-list hidden";
+    container.innerHTML = "";
+
+    if (typeof opcoesExtra !== "undefined") {
+      opcoesExtra.forEach(opcao => {
+        const label = document.createElement("label");
+        const input = document.createElement("input");
+
+        input.type = "checkbox";
+        input.name = "extra";
+        input.value = opcao;
+
+        label.appendChild(input);
+        label.appendChild(document.createTextNode(opcao));
+        container.appendChild(label);
+      });
+    }
+  }
 }
 
 function enviarFormulario(event) {
@@ -947,39 +998,51 @@ function toggleExtras() {
     : "Fechar extras ▲";
 }
 
-
 	window.addEventListener("load", () => {
     carregarAnuncios();
+// 🔥 ROTEADOR TELEGRAM
+if (window.Telegram &&
+    Telegram.WebApp &&
+    Telegram.WebApp.initDataUnsafe &&
+    Telegram.WebApp.initDataUnsafe.user) {
+
+  const startParam = Telegram.WebApp.initDataUnsafe.start_param;
+  const user = Telegram.WebApp.initDataUnsafe.user;
+
+  // 🔹 Se for anunciar
+  if (startParam === "anunciar") {
+    mostrarFormulario();
+  }
+
+  // 🔹 Se for buscar_
+  if (startParam && startParam.startsWith("buscar_")) {
+    const termo = startParam.replace("buscar_", "");
+    const barraPesquisa = document.getElementById("pesquisa");
+    if (barraPesquisa) {
+      barraPesquisa.value = termo;
+      filtrarAnuncios();
+    }
+  }
+}
+// 🔐 Esconde botão anunciar fora do Telegram
+if (!window.Telegram ||
+    !Telegram.WebApp ||
+    !Telegram.WebApp.initDataUnsafe ||
+    !Telegram.WebApp.initDataUnsafe.user) {
+
+  const botoes = document.querySelectorAll(".bottom-bar button");
+  botoes.forEach(btn => {
+    if (btn.textContent.includes("Anunciar")) {
+      btn.style.display = "none";
+    }
+  });
+}
     document.getElementById("pesquisa").addEventListener("input", filtrarAnuncios);
     document.querySelector(".menu-icon").addEventListener("click", toggleMenu);
     document.getElementById("menu-overlay").addEventListener("click", toggleMenu);
 
-  // 🔹 Buscar WhatsApp automático ao sair do campo usuário
-  const inputUsuario = document.getElementById("usuario");
-  if (inputUsuario) {
-    inputUsuario.addEventListener("blur", () => {
-      const nome = inputUsuario.value.trim();
-      if (!nome) return;
-     fetch(`https://script.google.com/macros/s/AKfycbwwC1b5pPAaKlkXkKkMtUteb4yG4-YbnmugdXbhXDtTxPSE_OOCvs34ivYxlD8VJhEXjg/exec?funcao=buscarWhatsapp&nome=${encodeURIComponent(nome)}`)
-        .then(res => res.text())
-        .then(telefone => {
-          const inputWhatsapp = document.getElementById("whatsappInput");
-          if (telefone && inputWhatsapp && !inputWhatsapp.value) {
-            inputWhatsapp.value = telefone;
-          }
-        })
-        .catch(err => console.error("Erro ao buscar WhatsApp:", err));
-    });
-  }
-
-
     // Verifica parâmetros da URL
 const params = new URLSearchParams(window.location.search);
-
-// 🔹 Se abrir=formulario → mostra o formulário
-if (params.get("abrir") === "formulario") {
-    mostrarFormulario();
-}
 
 // 🔹 Se pesquisar=alguma-coisa → aplica o filtro de pesquisa
 const termoPesquisa = params.get("pesquisar");
@@ -1009,7 +1072,7 @@ if (termoPesquisa) {
   <h3>CRIAR ANÚNCIO</h3>
   <form id="formAnuncio" onsubmit="enviarFormulario(event)">
 	<label>Nome de Usuário: 
-  <input type="text" id="usuario" placeholder="Ex: @Nome" name="usuario" required oninput="formatarUsuario(this)">
+  <input type="text" id="usuario" name="usuario" required readonly>
 </label><br>
 
 	<label>Qual o Streaming:
@@ -1130,27 +1193,5 @@ if (termoPesquisa) {
 >
   <i class="bi bi-whatsapp"></i>
 </button>
-
-<script>
-    document.addEventListener("DOMContentLoaded", function () {
-      const params = new URLSearchParams(window.location.search);
-      if (params.get("abrir") === "formulario") {
-        mostrarFormulario();
-      }
-      setTimeout(() => {
-        if (window.Telegram && Telegram.WebApp && Telegram.WebApp.initDataUnsafe.user) {
-          const user = Telegram.WebApp.initDataUnsafe.user;
-          if (user.username) {
-            const campo = document.getElementById("usuario");
-            if (campo) {
-              campo.value = "@" + user.username;
-            }
-          }
-        }
-      }, 200);
-    });
-</script>
-	
-</body>
+  </body>
 </html>
-
